// $Id$

TO DO
------
* Ability to receive the same message through more than one channel. It should be possible to implement some ‘abstract’ sending method that pipes messages through two or more other channels.
* Multilingual support for message templates.

6.x-1.1 to ....
--------------------------
- Added query builder helper for messaging and notifications
- Improved messaging store, multiple destinations are now serialized and message stored only once
- Implemented callbacks chain for message processing, callbacks defined on sending method.
- Reworked message processing, using objects now instead of array

6.x-1.0-rc3 to 6.x-1.1
--------------------------
- Fixed Cannot use object of type PHPMailer as array, #321212
- Added some debug tools and some basic support for incoming messages
- Formatting improvements and help texts for message templates admin page
- Implemented handling for disabling send methods, notify other modules
- Renamed some sending methods, better naming and avoid name clashes (phpmailer, mimemail)
- Added configurable names for sending methods, some changes in admin pages

6.x-1.0-rc2 to 6.x-1.0-rc3
--------------------------
- Upgraded messaging_phpmailer info file, by darren.ferguson, #309945
- Upgraded messaging_sms module, by darren.ferguson, #314896
- Updated unit tests to simpletest 6.x-2.x
- Fixed minor issues with modules and documentation
- Added German translation, by rastatt, #294378
- Fixed wrong delta in filter system, by the greenman, #305593
- Fixed namespace collisions with other hooks, #301715 and #294322
 
6.x-1.0-rc1 to 6.x-1.0-rc2
----------------------------
- Some clean up, moved documentation to the handbook, http://drupal.org/node/252582
- Fixed: Condition produces false positive when rendering messages, by andremolnar, #290163
- Added unit tests for message rendering.

6.x-1.0-beta1 to 6.x-1.0-rc1
----------------------------
- Creating a default input format on install, "Messaging plain text"